--- a/accounts/templates/resetmailsent.html
+++ b/accounts/templates/resetmailsent.html
@@ -1,14 +1,17 @@
 {% extends "base4.html" %}
+{% block title %}
+<title>Password Reset</title>
+{% endblock %}
 {% block side %}
 
 {% endblock %}
 {% block content %}
 
 <div class="w3-row w3-padding-64">
-<div class="w3-main" style="margin-left:150px">
-    <h1 class="w3-text-teal">Password Reset</h1>
-<h4>We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.</h4>
-    <a href="/">Back To Home</a>
-</div>
+    <div class="w3-main" style="margin-left:150px">
+        <h1 class="w3-text-teal">Password Reset</h1>
+        <h4>We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.</h4>
+        <a href="/">Back To Home</a>
+    </div>
 </div>
 {% endblock %}
