--- a/news/templates/404_page.html
+++ b/news/templates/404_page.html
@@ -1,14 +1,17 @@
 {% extends "base3.html" %}
+{% block title %}
+<title>NewsCorner</title>
+{% endblock %}
 {% block Nav %}
 {% include 'Navbar1.html' %}
 {% endblock %}
 {% block side%}
 <div class="w3-padding-80">
-<center>
-	<h3>OOPS! Page not Found.</h3>
-<a href="/">Back To Home</a>
-</center>
-	</div>
+    <center>
+        <h3>OOPS! Page not Found.</h3>
+        <a href="/">Back To Home</a>
+    </center>
+</div>
 {% endblock%}
 {% block foot %}
 {% include 'footer.html' %}
