--- a/news/templates/contactusconfirm.html
+++ b/news/templates/contactusconfirm.html
@@ -1,14 +1,17 @@
 {% extends "base3.html" %}
+{% block title %}
+<title>Contact Us</title>
+{% endblock %}
 {% block Nav %}
 {% include 'Navbar1.html' %}
 {% endblock %}
 {% block side%}
 <div class="w3-padding-80">
-<center>
-	<h5>Thanks for your interest we will get back to soon</h5>
-<a href="/">Back To Home</a>
-</center>
-	</div>
+    <center>
+        <h5>Thanks for your interest we will get back to soon</h5>
+        <a href="/">Back To Home</a>
+    </center>
+</div>
 {% endblock%}
 {% block foot %}
 {% include 'footer.html' %}
