--- a/news/templates/footer.html
+++ b/news/templates/footer.html
@@ -42,6 +42,7 @@
 }
 
 
+
 </style>
 
 <footer id="footer" class="site-footer">
@@ -57,26 +58,31 @@
                             <h4 class="widgettitle">Importent Page :</h4>
                             <ul>
                                 <li><a href="/"><i class="fa fa-home fa-fw"></i> Home</a></li>
-                                <li><a href="/pages/privacy-policy/"><i class="fa fa-link"></i>   Privacy Policy</a></li>
+                                <li><a href="/pages/privacy-policy/"><i class="fa fa-link"></i>   Privacy Policy</a>
+                                </li>
                                 <li><a href="/contact/"><i class="fa fa-envelope fa-fw"></i> Contact Us</a></li>
                             </ul>
-                        </div>      </div> <!-- end widget1 -->
+                        </div>
+                    </div> <!-- end widget1 -->
 
                     <div class="col-sm-6 col-md-2">
                         <div id="recent-posts-3" class="widget widgetFooter widget_recent_entries">
                             <h4 class="widgettitle">Our social media :</h4>
                             <ul>
                                 <li>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i> Facebook</a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i>
+                                        Facebook</a>
                                 </li>
                                 <li>
-                                    <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i> Twitter</a>
+                                    <a href="https://www.twitter.com/" target="_blank"><i class="fa fa-twitter"></i>
+                                        Twitter</a>
                                 </li>
                                 <li>
                                     <a href="http://www.google.com/" target="_blank"><i class="fa fa-google"></i> Google</a>
                                 </li>
                             </ul>
-                        </div>            </div> <!-- end widget1 -->
+                        </div>
+                    </div> <!-- end widget1 -->
 
                     <div class="col-sm-1 col-md-1 col-xl-4 col-lg-1">
                         <div id="meta-4" class="widget widgetFooter widget_meta">
@@ -96,22 +102,25 @@
                     </div> <!-- end widget1 -->
 
                     <div class="col-sm-6 col-md-4">
-                        <div id="search-3" class="widget widgetFooter widget_search"><h4 class="widgettitle">Subscribe :</h4>
+                        <div id="search-3" class="widget widgetFooter widget_search"><h4 class="widgettitle">Subscribe
+                            :</h4>
                             <form action="/letter/" method="post" id="NewsletterForm">
                                 {% csrf_token %}
                                 <div class="form-group">
                                     <div class="input-group">
 
                                         <span class="input-group-addon">E-mail :</span>
-                                        <input class="form-control" placeholder="Write your email .." type="email"  name="email" required="True">
+                                        <input class="form-control" placeholder="Write your email .." type="email"
+                                               name="email" required="True">
                                         <span class="input-group-btn">
-                                    <button  class="btn btn-primary" type="submit">Subscribe !</button>
+                                    <button class="btn btn-primary" type="submit">Subscribe !</button>
                     </span>
 
                                     </div>
                                 </div>
                             </form>
-                        </div>            </div> <!-- end widget1 -->
+                        </div>
+                    </div> <!-- end widget1 -->
 
                 </div> <!-- end .row -->
 
