--- a/accounts/templates/ConfirmEmail.html
+++ b/accounts/templates/ConfirmEmail.html
@@ -1,4 +1,7 @@
 {% extends "base4.html" %}
+{% block title %}
+<title>Email Confirmation</title>
+{% endblock %}
 {% load i18n %}
 {% load account %}
 {% block side %}
@@ -6,27 +9,30 @@
 {% endblock %}
 {% block content %}
 <div class="w3-row w3-padding-64">
-<div class="w3-main" style="margin-left:150px">
-<h1 class="w3-text-teal">"Confirm E-mail Address"</h1>
+    <div class="w3-main" style="margin-left:150px">
+        <h1 class="w3-text-teal">"Confirm E-mail Address"</h1>
 
-{% if confirmation %}
+        {% if confirmation %}
 
-{% user_display confirmation.email_address.user as user_display %}
+        {% user_display confirmation.email_address.user as user_display %}
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
+        <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a
+                href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{%
+            endblocktrans %}</p>
 
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
+        <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+            {% csrf_token %}
+            <button type="submit">{% trans 'Confirm' %}</button>
+        </form>
 
-{% else %}
+        {% else %}
 
-{% url 'account_email' as email_url %}
+        {% url 'account_email' as email_url %}
 
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a
+            new e-mail confirmation request</a>.{% endblocktrans %}</p>
 
-{% endif %}
-</div>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
