--- a/accounts/templates/forgotpassword.html
+++ b/accounts/templates/forgotpassword.html
@@ -1,4 +1,7 @@
 {% extends "base4.html" %}
+{% block title %}
+<title>Forgot Password</title>
+{% endblock %}
 {% load i18n %}
 <style>
   body {
@@ -38,6 +41,7 @@
     text-align: center;
     line-height: 300%;
   }
+
 </style>
 {% block side %}
 
@@ -55,25 +59,27 @@
                 <form method="POST" action="/account/password/reset/" class="password_reset">
                     {% csrf_token %}
 
-                        {% if form.errors %}
-                        {% for value in form.errors.values %}
-                        <div class="alert alert-info alert-dismissable">
-                            <a class="panel-close close" data-dismiss="alert">×</a>
-                            <i class="fa fa-coffee"></i>
+                    {% if form.errors %}
+                    {% for value in form.errors.values %}
+                    <div class="alert alert-info alert-dismissable">
+                        <a class="panel-close close" data-dismiss="alert">×</a>
+                        <i class="fa fa-coffee"></i>
 
-                            <p>{{ value }}</p>
-                        </div>
-                        {% endfor %}
-                        {% endif %}
+                        <p>{{ value }}</p>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
                     <br>
                     <h1>Password Reset</h1>
-                    <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
+                    <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing
+                        you to reset it.</p>
                     <br>
                     <div class="col-md-3 personal-info"></div>
                     <br>
                     <div class="form-group">
                         <label for="id_email">Email:</label>
-                        <input type="email" name="email" id="id_email" placeholder="E-mail address" size="30" required class="form-control">
+                        <input type="email" name="email" id="id_email" placeholder="E-mail address" size="30" required
+                               class="form-control">
                     </div>
 
                     <button type="submit" class="btn btn btn-primary">Reset my Password
@@ -85,7 +91,8 @@
             <div class="col-xs-3 col-sm-3 col-md-3"></div>
 
         </div>
-    </div><div class="col-xs-12" style="height:300px;"></div>
+    </div>
+    <div class="col-xs-12" style="height:300px;"></div>
 </div>
 </div>
 
