--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,4 +1,7 @@
 {% extends "base4.html" %}
+{% block title %}
+<title>Login</title>
+{% endblock %}
 {% load i18n %}
 <style>
   body {
@@ -38,6 +41,7 @@
     text-align: center;
     line-height: 300%;
   }
+
 </style>
 {% block side %}
 
@@ -57,7 +61,8 @@
                 <div class="col-xs-2 col-sm-2 col-md-2"></div>
 
                 <div class="col-xs-4 col-sm-4 col-md-4">
-                    <a href="/accounts/facebook/login/?process=login" class="btn btn-lg btn-primary btn-block">Facebook</a>
+                    <a href="/accounts/facebook/login/?process=login"
+                       class="btn btn-lg btn-primary btn-block">Facebook</a>
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4">
                     <a href="/accounts/google/login/?process=login" class="btn btn-lg btn-info btn-block">Google</a>
@@ -69,14 +74,12 @@
                 <hr class="hr-or">
 
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3"></div>
+            <div class="col-xs-3 col-sm-3 col-md-2"></div>
 
-            <div class="col-xs-6 col-sm-6 col-md-6">
+            <div class="col-xs-6 col-sm-6 col-md-8">
                 <form class="login" method="POST" action="{% url 'account_login' %}" id="LoginForm" name="LoginForm">
                     {% csrf_token %}
-                    <div class="col-md-3 personal-info"></div>
 
-                    <div class="col-md-6 personal-info">
 
                         {% if form.errors %}
                         {% for value in form.errors.values %}
@@ -88,17 +91,19 @@
                         </div>
                         {% endfor %}
                         {% endif %}
-                    </div>
+
                     <div class="col-md-3 personal-info"></div>
-<br>
+                    <br>
                     <div class="form-group">
                         <label for="form.id_login">Username</label>
-                        <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus" id="form.id_login" class="form-control">
+                        <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus"
+                               id="form.id_login" class="form-control">
                     </div>
                     <div class="form-group">
                         <a class="pull-right" href="/account/password/reset/">Forgot password?</a>
                         <label for="form.id_password">Password</label>
-                        <input type="password" name="password" required="" placeholder="Password" id="form.id_password" class="form-control">
+                        <input type="password" name="password" required="" placeholder="Password" id="form.id_password"
+                               class="form-control">
                     </div>
                     <div class="checkbox pull-right">
                         <label>
@@ -109,15 +114,16 @@
                         Log In
                     </button>
                     {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
                     {% endif %}
 
                 </form>
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3"></div>
+            <div class="col-xs-3 col-sm-3 col-md-2"></div>
 
         </div>
-    </div><div class="col-xs-12" style="height:300px;"></div>
+    </div>
+    <div class="col-xs-12" style="height:300px;"></div>
 </div>
 </div>
 {% endblock %}
