--- a/accounts/templates/passwordchange.html
+++ b/accounts/templates/passwordchange.html
@@ -1,4 +1,7 @@
 {% extends "base4.html" %}
+{% block title %}
+<title>Password Change</title>
+{% endblock %}
 {% load i18n %}
 <style>
   body {
@@ -38,6 +41,7 @@
     text-align: center;
     line-height: 300%;
   }
+
 </style>
 {% block side %}
 
@@ -55,16 +59,16 @@
                 <form method="POST" action="/account/password/change/" class="password_change">
                     {% csrf_token %}
 
-                        {% if form.errors %}
-                        {% for value in form.errors.values %}
-                        <div class="alert alert-info alert-dismissable">
-                            <a class="panel-close close" data-dismiss="alert">×</a>
-                            <i class="fa fa-coffee"></i>
+                    {% if form.errors %}
+                    {% for value in form.errors.values %}
+                    <div class="alert alert-info alert-dismissable">
+                        <a class="panel-close close" data-dismiss="alert">×</a>
+                        <i class="fa fa-coffee"></i>
 
-                            <p>{{ value }}</p>
-                        </div>
-                        {% endfor %}
-                        {% endif %}
+                        <p>{{ value }}</p>
+                    </div>
+                    {% endfor %}
+                    {% endif %}
                     <br>
                     <h1>Change Password</h1>
                     <br>
@@ -72,15 +76,18 @@
                     <br>
                     <div class="form-group">
                         <label for="id_oldpassword">Current Password</label>
-                        <input type="password" name="oldpassword" id="id_oldpassword" placeholder="Current Password" required="" class="form-control">
+                        <input type="password" name="oldpassword" id="id_oldpassword" placeholder="Current Password"
+                               required="" class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="id_password1">New Password</label>
-                        <input type="password"  id="id_password1" placeholder="New Password" required="" class="form-control">
+                        <input type="password" id="id_password1" placeholder="New Password" required=""
+                               class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="id_password2">New Password</label>
-                        <input type="password"  id="id_password2" placeholder="New Password" required="" class="form-control">
+                        <input type="password" id="id_password2" placeholder="New Password" required=""
+                               class="form-control">
                     </div>
 
                     <button type="submit" class="btn btn btn-primary">Change Password
@@ -92,7 +99,8 @@
             <div class="col-xs-3 col-sm-3 col-md-3"></div>
 
         </div>
-    </div><div class="col-xs-12" style="height:300px;"></div>
+    </div>
+    <div class="col-xs-12" style="height:300px;"></div>
 </div>
 </div>
 
