--- a/accounts/templates/passwordreset.html
+++ b/accounts/templates/passwordreset.html
@@ -1,5 +1,7 @@
-
 {% extends "base4.html" %}
+{% block title %}
+<title>Password Reset</title>
+{% endblock %}
 {% load i18n %}
 <style>
   body {
@@ -39,6 +41,7 @@
     text-align: center;
     line-height: 300%;
   }
+
 </style>
 {% block side %}
 
@@ -72,11 +75,13 @@
                     <br>
                     <div class="form-group">
                         <label for="id_password1">Password</label>
-                        <input type="password" name="password1" id="id_password1" placeholder="Password" required="" class="form-control">
+                        <input type="password" name="password1" id="id_password1" placeholder="Password" required=""
+                               class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="id_password2">Password</label>
-                        <input type="password" name="password2" id="id_password2" placeholder="Password" required="" class="form-control">
+                        <input type="password" name="password2" id="id_password2" placeholder="Password" required=""
+                               class="form-control">
                     </div>
                     <button type="submit" class="btn btn btn-primary">
                         Change Password
