--- a/accounts/templates/passwordset.html
+++ b/accounts/templates/passwordset.html
@@ -1,5 +1,7 @@
-
 {% extends "base4.html" %}
+{% block title %}
+<title>Password Set</title>
+{% endblock %}
 {% load i18n %}
 <style>
   body {
@@ -39,6 +41,7 @@
     text-align: center;
     line-height: 300%;
   }
+
 </style>
 {% block side %}
 
@@ -55,17 +58,17 @@
             <div class="col-xs-6 col-sm-6 col-md-6">
                 <form method="POST" action="/account/password/set/" class="password_set">
                     {% csrf_token %}
-                        {% if form.errors %}
-                        {% for value in form.errors.values %}
-                        <div class="alert alert-info alert-dismissable">
-                            <a class="panel-close close" data-dismiss="alert">×</a>
-                            <i class="fa fa-coffee"></i>
+                    {% if form.errors %}
+                    {% for value in form.errors.values %}
+                    <div class="alert alert-info alert-dismissable">
+                        <a class="panel-close close" data-dismiss="alert">×</a>
+                        <i class="fa fa-coffee"></i>
 
-                            <p>{{ value }}</p>
-                        </div>
-                        {% endfor %}
-                        <br>
-                        {% endif %}
+                        <p>{{ value }}</p>
+                    </div>
+                    {% endfor %}
+                    <br>
+                    {% endif %}
                     <h1>Set Password</h1>
                     <p>Once you have set a password, use can login as local user</p>
                     <br>
@@ -73,11 +76,13 @@
                     <br>
                     <div class="form-group">
                         <label for="id_password1">Password</label>
-                        <input type="password" name="password1" id="id_password1" placeholder="Password" required="" class="form-control">
+                        <input type="password" name="password1" id="id_password1" placeholder="Password" required=""
+                               class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="id_password2">Password</label>
-                        <input type="password" name="password2" id="id_password2" placeholder="Password" required="" class="form-control">
+                        <input type="password" name="password2" id="id_password2" placeholder="Password" required=""
+                               class="form-control">
                     </div>
                     <button type="submit" class="btn btn btn-primary">
                         Set Password
