--- a/accounts/templates/profile_edit.html
+++ b/accounts/templates/profile_edit.html
@@ -1,70 +1,73 @@
 {% extends "base4.html" %}
+{% block title %}
+<title>Profile Edit</title>
+{% endblock %}
 {% block side %}
 
 {% endblock %}
 {% block content %}
 <div class="container">
     <h1>Edit Profile</h1>
-  	<hr>
-	<div class="row">
+    <hr>
+    <div class="row">
 
-      <!-- edit form column -->
-      <div class="col-md-9 personal-info">
-        <h3>Personal info</h3>
+        <!-- edit form column -->
+        <div class="col-md-9 personal-info">
+            <h3>Personal info</h3>
 
-        <form class="form-horizontal" role="form" action="/account/profileedit/" method="post" id="editform">
-            {% csrf_token %}
-          <div class="form-group">
-            <label class="col-lg-3 control-label">First name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{ user.first_name }}" name="firstname">
-            </div>
-          </div>
+            <form class="form-horizontal" role="form" action="/account/profileedit/" method="post" id="editform">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label class="col-lg-3 control-label">First name:</label>
+                    <div class="col-lg-8">
+                        <input class="form-control" type="text" value="{{ user.first_name }}" name="firstname">
+                    </div>
+                </div>
 
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Last name:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="{{ user.last_name }}" name="lastname">
-            </div>
-          </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label">Last name:</label>
+                    <div class="col-lg-8">
+                        <input class="form-control" type="text" value="{{ user.last_name }}" name="lastname">
+                    </div>
+                </div>
 
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Email:</label>
-            <div class="col-lg-8">
-              <div class="inline">
-                <input class="form-control" type="text" value="{{ user.email }}" name="email" readonly>
-                <a href="/account/email/">Change Email</a>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Username:</label>
-            <div class="col-lg-8">
-              <input class="form-control" value="{{ user.username }}" name="username" readonly>
-            </div>
-          </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label">Email:</label>
+                    <div class="col-lg-8">
+                        <div class="inline">
+                            <input class="form-control" type="text" value="{{ user.email }}" name="email" readonly>
+                            <a href="/account/email/">Change Email</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label">Username:</label>
+                    <div class="col-lg-8">
+                        <input class="form-control" value="{{ user.username }}" name="username" readonly>
+                    </div>
+                </div>
 
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Password:</label>
-            <div class="col-lg-8">
-              <div class="inline">
-                <input class="form-control" value="Password" readonly>
-                <a href="/account/password/change/">Change Password</a>
-              </div>
-            </div>
-          </div>
+                <div class="form-group">
+                    <label class="col-lg-3 control-label">Password:</label>
+                    <div class="col-lg-8">
+                        <div class="inline">
+                            <input class="form-control" value="Password" readonly>
+                            <a href="/account/password/change/">Change Password</a>
+                        </div>
+                    </div>
+                </div>
 
-          <div class="form-group">
-            <label class="col-md-3 control-label"></label>
-            <div class="col-md-8">
-              <input type="submit" class="btn btn-primary" value="Save Changes">
-              <span></span>
-              <input type="reset" class="btn btn-default" value="Cancel">
-            </div>
-          </div>
-        </form>
-      </div>
-  </div>
+                <div class="form-group">
+                    <label class="col-md-3 control-label"></label>
+                    <div class="col-md-8">
+                        <input type="submit" class="btn btn-primary" value="Save Changes">
+                        <span></span>
+                        <input type="reset" class="btn btn-default" value="Cancel">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 <hr>
 {% endblock %}
