--- a/accounts/templates/sucess1.html
+++ b/accounts/templates/sucess1.html
@@ -1,15 +1,17 @@
 {% extends "base4.html" %}
 {% block side %}
-
+{% block title %}
+<title>Password changed</title>
+{% endblock %}
 {% endblock %}
 {% block content %}
 
 <div class="w3-row w3-padding-64">
-<div class="w3-main" style="margin-left:150px">
-    <h1 class="w3-text-teal">"Password changed"</h1>
+    <div class="w3-main" style="margin-left:150px">
+        <h1 class="w3-text-teal">"Password changed"</h1>
 
-<h4>Changes was sucessfully saved</h4>
-    <a href="/">Login here</a>
-</div>
+        <h4>Changes was sucessfully saved</h4>
+        <a href="/">Login here</a>
+    </div>
 </div>
 {% endblock %}
