--- a/news/templates/activate.html
+++ b/news/templates/activate.html
@@ -1,4 +1,7 @@
 {% extends "base3.html" %}
+{% block title %}
+<title>NewsLetter</title>
+{% endblock %}
 {% block Nav %}
 {% include 'Navbar1.html' %}
 {% endblock %}
