--- a/news/templates/news_details.html
+++ b/news/templates/news_details.html
@@ -1,6 +1,6 @@
 {% extends "base3.html" %}
 {% block title %}
-    <title>{{ news.title }}</title>
+<title>{{ news.title }}</title>
 {% endblock %}
 
 {% load comments %}
@@ -24,38 +24,43 @@ $.ajax({
 });
 });
 });
+
 </script>
 <style>
 #id_honeypot {
     display: none;
 }
+
 </style>
 
 
-  <div class="w3-row w3-padding-64">
+<div class="w3-row w3-padding-64">
     <div class="w3-container">
         <h1 class="w3-text-teal">{{ news.title }}</h1>
         <p>{{ news.content}}</p>
 
-<div class="center">
-{% if news.image %}
-    <img src="{{ news.image.url }}" style="display: block;margin: auto;max-width: 100%;
+        <div class="center">
+            {% if news.image %}
+            <img src="{{ news.image.url }}" style="display: block;margin: auto;max-width: 100%;
     height: auto;padding-bottom: 2cm;"/>
-{% endif %}
-</div>
-<a href="https://www.facebook.com/sharer/sharer.php?u=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}"
-   class="btn btn-social btn-facebook"><i class="fa fa-facebook"></i>Share on Facebook</a><br>
-<a href="https://twitter.com/home?status=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}">Share on Twitter</a><br>
-<a href="https://plus.google.com/share?url=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}">Share on Google+</a><br>
-<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}&title={{ news.title }}=&source=">Share on LinkedIn</a>
-</div>
+            {% endif %}
+        </div>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}"
+           class="btn btn-social btn-facebook"><i class="fa fa-facebook"></i>Share on Facebook</a><br>
+        <a href="https://twitter.com/home?status=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}">Share on
+            Twitter</a><br>
+        <a href="https://plus.google.com/share?url=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}">Share on
+            Google+</a><br>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://newscorner.herokuapp.com/{{ type2 }}/{{ news.slug }}&title={{ news.title }}=&source=">Share
+            on LinkedIn</a>
+    </div>
 
-  </div>
+</div>
 {% endblock %}
 
 {% block comment %}
 
-  {% include 'list_comment.html' %}
+{% include 'list_comment.html' %}
 {% endblock %}
 
 
