--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -118,7 +118,7 @@
                                                    class="form-control input-sm" placeholder="Confirm Password">
                     </div>
                     <button type="submit" class="btn btn btn-primary">
-                        Sign Un
+                        Sign Up
                     </button>
                     {% if redirect_field_value %}
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
