--- a/accounts/templates/passwordchange.html
+++ b/accounts/templates/passwordchange.html
@@ -81,12 +81,12 @@
                     </div>
                     <div class="form-group">
                         <label for="id_password1">New Password</label>
-                        <input type="password" id="id_password1" placeholder="New Password" required=""
+                        <input type="password" name="password1" id="id_password1" placeholder="New Password" required=""
                                class="form-control">
                     </div>
                     <div class="form-group">
                         <label for="id_password2">New Password</label>
-                        <input type="password" id="id_password2" placeholder="New Password" required=""
+                        <input type="password" name="password2" id="id_password2" placeholder="New Password" required=""
                                class="form-control">
                     </div>
 
