--- a/accounts/templates/passwordreset.html
+++ b/accounts/templates/passwordreset.html
@@ -56,7 +56,7 @@
         <div class="main">
 
             <div class="col-xs-6 col-sm-6 col-md-6">
-                <form method="POST" action="/account/password/reset/key/j-set-password/">
+                <form method="POST" action="{{ action_url }}">
                     {% csrf_token %}
                     {% if form.errors %}
                     {% for value in form.errors.values %}
