--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -30,7 +30,7 @@ $.ajax({
 <div id="results">
     {% for new in news %}
     <div class="w3-row w3-padding-64">
-        <div class="w3-twothird w3-container">
+        <div class="w3-container">
             <div class="w3-container">
                 <h3><a href="{% url 'news:news-details' new.news_type.type new.slug %}"
                        class="w3-text-teal w3-hover-white">{{ new.title }}</a></h3>
