--- a/accounts/templates/Navbar2.html
+++ b/accounts/templates/Navbar2.html
@@ -7,7 +7,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!-- Navbar -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
 
         <div class="navbar-header">
@@ -16,9 +16,9 @@
             <a class="navbar-brand" href="/">NewsCorner</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/">Home</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/pages/contact/">About</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/pages/contact/">Contact us</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
@@ -31,8 +31,8 @@
                 </ul>
             </li>
             {% else %}
-            <li><a href="/account/signup/"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="/account/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/account/signup/"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/account/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             {% endif %}
         </ul>
     </div>
