--- a/news/templates/Sidebar.html
+++ b/news/templates/Sidebar.html
@@ -2,7 +2,7 @@
   .w3-sidebar {
     z-index: 3;
   width: 250px;
-  top: 43px;
+  top: 50px;
   bottom: 0;
   height: inherit;
 }
@@ -21,8 +21,17 @@
     {% for newc in news_cat_list %}
     <a href="{% url 'news:news-cat-view' newc.type %}" class="w3-bar-item w3-button w3-hover-black">{{ newc.type }}</a>
     {% endfor %}
+    <br>
     {% if user.is_authenticated %}
-
+        <p class="w3-bar-item w3-button hidden-md, hidden-lg shown-sm, shown-xs">Accounts</p>
+        <div class="dropdown"><a class="dropdown-toggle w3-bar-item w3-button hidden-md, hidden-lg shown-sm, shown-xs" data-toggle="dropdown" href="">Hi {{ user.username }}<span
+                    class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="/account/profileedit/"><span class="glyphicon glyphicon-edit"></span> Profile Edit</a>
+                    </li>
+                    <li><a href="/account/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                </ul>
+        </div>
     {% else %}
         <a class="hidden-md, hidden-lg shown-sm, shown-xs w3-bar-item w3-button" href="/account/signup/"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
         <a class="hidden-md, hidden-lg shown-sm, shown-xs w3-bar-item w3-button" href="/account/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a>
