--- a/accounts/templates/Navbar2.html
+++ b/accounts/templates/Navbar2.html
@@ -17,8 +17,8 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a class="hidden-sm, hidden-xs" href="/">Home</a></li>
-            <li><a class="hidden-sm, hidden-xs" href="/pages/contact/">About</a></li>
-            <li><a class="hidden-sm, hidden-xs" href="/pages/contact/">Contact us</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/pages/about/">About</a></li>
+            <li><a class="hidden-sm, hidden-xs" href="/contact/">Contact us</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
