--- a/accounts/templates/emailchange.html
+++ b/accounts/templates/emailchange.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block side %}
-
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 <div class="w3-row w3-padding-64">
