--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -44,11 +44,11 @@
 
 </style>
 {% block side %}
-
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 
-<div class="col-xs-12" style="height:150px;"></div>
+<div class="col-xs-12" style="height:50px;"></div>
 
 <div class="container">
     <div class="row">
@@ -123,7 +123,7 @@
 
         </div>
     </div>
-    <div class="col-xs-12" style="height:300px;"></div>
+    <div class="col-xs-12" style="height:50px;"></div>
 </div>
 </div>
 {% endblock %}
