--- a/accounts/templates/profile_edit.html
+++ b/accounts/templates/profile_edit.html
@@ -3,7 +3,7 @@
 <title>Profile Edit</title>
 {% endblock %}
 {% block side %}
-
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 <div class="container">
