--- a/accounts/templates/resetmailsent.html
+++ b/accounts/templates/resetmailsent.html
@@ -3,7 +3,7 @@
 <title>Password Reset</title>
 {% endblock %}
 {% block side %}
-
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 
