--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -46,11 +46,11 @@
 
 </style>
 {% block side %}
-
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 
-<div class="col-xs-12" style="height:100px;"></div>
+<div class="col-xs-12" style="height:50px;"></div>
 
 <div class="container">
     <div class="row">
@@ -130,7 +130,7 @@
 
         </div>
     </div>
-    <div class="col-xs-12" style="height:300px;"></div>
+    <div class="col-xs-12" style="height:50px;"></div>
 </div>
 </div>
 
