--- a/accounts/templates/sucess.html
+++ b/accounts/templates/sucess.html
@@ -1,8 +1,10 @@
 {% extends "base4.html" %}
-{% block side %}
+
 {% block title %}
 <title>Profile Changed</title>
 {% endblock %}
+{% block side %}
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 
