--- a/news/templates/contact_page.html
+++ b/news/templates/contact_page.html
@@ -102,6 +102,8 @@
 {% include 'Navbar1.html' %}
 {% endblock %}
 {% block side%}
+{% include 'sidebar2.html' %}
+
 <div class="w3-padding-64">
     <div class="container animated fadeIn">
 
