--- a/accounts/templates/Emailverficationsent.html
+++ b/accounts/templates/Emailverficationsent.html
@@ -3,7 +3,7 @@
 <title>Email Verification</title>
 {% endblock %}
 {% block side %}
-
+{% include 'sidebar2.html' %}
 {% endblock %}
 {% block content %}
 <div class="w3-row w3-padding-64">
