--- a/accounts/templates/sucess1.html
+++ b/accounts/templates/sucess1.html
@@ -1,8 +1,11 @@
 {% extends "base4.html" %}
-{% block side %}
+
 {% block title %}
 <title>Password changed</title>
 {% endblock %}
+{% block side %}
+{% include 'sidebar2.html' %}
+
 {% endblock %}
 {% block content %}
 
