--- a/news/templates/contactusconfirm.html
+++ b/news/templates/contactusconfirm.html
@@ -10,6 +10,8 @@
 <br>
 <br>
 <br>
+{% include 'sidebar2.html' %}
+
 <div class="w3-padding-80">
     <center>
         <h5>Thanks for your interest we will get back to soon</h5>
