--- a/news/templates/flatpage.html
+++ b/news/templates/flatpage.html
@@ -6,6 +6,7 @@
 {% include 'Navbar1.html' %}
 {% endblock %}
 {% block side%}
+{% include 'sidebar2.html' %}
 <div class="w3-main" style="margin-left:100px">
     <div class="w3-row w3-padding-64">
         <div class="w3-container">
