--- a/accounts/templates/sidebar2.html
+++ b/accounts/templates/sidebar2.html
@@ -24,9 +24,9 @@
         <div class="dropdown"><a class="dropdown-toggle w3-bar-item w3-button hidden-md, hidden-lg shown-sm, shown-xs" data-toggle="dropdown" href="">Hi {{ user.username }}<span
                     class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/account/profileedit/"><span class="glyphicon glyphicon-edit"></span> Profile Edit</a>
+                    <li><a class="w3-bar-item w3-button" href="/account/profileedit/"><span class="glyphicon glyphicon-edit"></span> Profile Edit</a>
                     </li>
-                    <li><a href="/account/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <li><a class="w3-bar-item w3-button" href="/account/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
         </div>
     {% else %}
