--- a/news/templates/Sidebar.html
+++ b/news/templates/Sidebar.html
@@ -27,14 +27,14 @@
         <div class="dropdown"><a class="dropdown-toggle w3-bar-item w3-button hidden-md, hidden-lg shown-sm, shown-xs" data-toggle="dropdown" href="">Hi {{ user.username }}<span
                     class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a class="w3-bar-item w3-button" href="/account/profileedit/"><span class="glyphicon glyphicon-edit"></span> Profile Edit</a>
+                    <li><a href="/account/profileedit/"><span class="glyphicon glyphicon-edit"></span> Profile Edit</a>
                     </li>
-                    <li><a class="w3-bar-item w3-button" href="/account/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <li><a href="/account/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
         </div>
     {% else %}
-        <a class="hidden-md, hidden-lg shown-sm, shown-xs w3-bar-item w3-button w3-bar-item" href="/account/signup/"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
-        <a class="hidden-md, hidden-lg shown-sm, shown-xs w3-bar-item w3-button w3-bar-item" href="/account/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+        <a class="hidden-md, hidden-lg shown-sm, shown-xs w3-bar-item w3-button" href="/account/signup/"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+        <a class="hidden-md, hidden-lg shown-sm, shown-xs w3-bar-item w3-button" href="/account/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a>
     {% endif %}
 </nav>
 
