--- a/accounts/templates/passwordreset.html
+++ b/accounts/templates/passwordreset.html
@@ -60,7 +60,7 @@
                     {% csrf_token %}
                     {% if form.errors %}
                     {% for value in form.errors.values %}
-                    <div class="alert alert-info alert-dismissable">
+                    <div class="alert alert-warning alert-dismissable">
                         <a class="panel-close close" data-dismiss="alert">×</a>
                         <i class="fa fa-coffee"></i>
 
