--- a/accounts/templates/Navbar2.html
+++ b/accounts/templates/Navbar2.html
@@ -22,7 +22,11 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="">{{ user.username }}<span
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="">Hi {% if not user.first_name %}
+                    {{ user.username }}
+                {% else %}
+                    {{ user.first_name }}
+                {% endif %}<span
                     class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="/account/profileedit/"><span class="glyphicon glyphicon-edit"></span> Profile Edit</a>
