--- a/accounts/templates/forgotpassword.html
+++ b/accounts/templates/forgotpassword.html
@@ -61,7 +61,7 @@
 
                     {% if form.errors %}
                     {% for value in form.errors.values %}
-                    <div class="alert alert-info alert-dismissable">
+                    <div class="alert alert-warning alert-dismissable">
                         <a class="panel-close close" data-dismiss="alert">×</a>
                         <i class="fa fa-coffee"></i>
 
