--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -83,7 +83,7 @@
 
                         {% if form.errors %}
                         {% for value in form.errors.values %}
-                        <div class="alert alert-info alert-dismissable">
+                        <div class="alert alert-warning alert-dismissable">
                             <a class="panel-close close" data-dismiss="alert">×</a>
                             <i class="fa fa-coffee"></i>
 
@@ -95,7 +95,7 @@
                     <div class="col-md-3 personal-info"></div>
                     <br>
                     <div class="form-group">
-                        <label for="form.id_login">Username</label>
+                        <label for="form.id_login">Username or Email</label>
                         <input input type="text" name="login" required="" placeholder="Username" autofocus="autofocus"
                                id="form.id_login" class="form-control">
                     </div>
