--- a/accounts/templates/passwordset.html
+++ b/accounts/templates/passwordset.html
@@ -60,11 +60,9 @@
                     {% csrf_token %}
                     {% if form.errors %}
                     {% for value in form.errors.values %}
-                    <div class="alert alert-warning alert-dismissable">
+                    <div class="alert alert-warning alert-dismissable fade in">
                         <a class="panel-close close" data-dismiss="alert">×</a>
-                        <i class="fa fa-coffee"></i>
-
-                        <p>{{ value }}</p>
+                        {{ value }}
                     </div>
                     {% endfor %}
                     <br>
