--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -42,6 +42,11 @@
         <form class="navbar-form navbar-right">
             <div class="input-group">
                 <input id="q" type="search" class="form-control" placeholder="Search">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit" id="p">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </div>
             </div>
         </form>
     </div>
