--- a/news/templates/news_cat.html
+++ b/news/templates/news_cat.html
@@ -8,7 +8,7 @@
 <script>
 $(document).ready( function() {
 var w = "{{ type1 }}";
-$('#q' ).keyup( function() {
+$('#p' ).click( function() {
 var q = $('#q').val();
 console.log(q);
 console.log(w);
