--- a/news/templates/news_list.html
+++ b/news/templates/news_list.html
@@ -7,7 +7,7 @@
         type="text/javascript"></script>
 <script>
 $(document).ready( function() {
-$('#q' ).keyup( function() {
+$('#p' ).click( function() {
 var q = $('#q').val();
 console.log(q);
 $.ajax({
