--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -43,7 +43,7 @@
             <div class="input-group">
                 <input id="q" type="search" class="form-control" placeholder="Search">
                 <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit" id="p">
+                    <button class="btn btn-default" id="p">
                         <i class="glyphicon glyphicon-search"></i>
                     </button>
                 </div>
