--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -41,7 +41,7 @@
         </ul>
         <form class="navbar-form navbar-right">
             <div class="input-group">
-                <input id="q" type="search" class="form-control" placeholder="Search">
+                <input id="q" type="text" class="form-control" placeholder="Search">
                 <div class="input-group-btn">
                     <button class="btn btn-default" type="button" id="p">
                         <i class="glyphicon glyphicon-search"></i>
