--- a/accounts/templates/footer.html
+++ b/accounts/templates/footer.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-@import url("http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
 
 #footer {
     border-top: 5px solid #CDB380;
@@ -78,7 +78,7 @@
                                         Twitter</a>
                                 </li>
                                 <li>
-                                    <a href="http://www.google.com/" target="_blank"><i class="fa fa-google"></i> Google</a>
+                                    <a href="https://www.google.com/" target="_blank"><i class="fa fa-google"></i> Google</a>
                                 </li>
                             </ul>
                         </div>
