--- a/news/templates/Navbar.html
+++ b/news/templates/Navbar.html
@@ -39,7 +39,7 @@
             <li><a class="hidden-sm, hidden-xs" href="/account/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             {% endif %}
         </ul>
-        <form class="navbar-form navbar-right">
+        <div class="navbar-form navbar-right">
             <div class="input-group">
                 <input id="q" type="text" class="form-control" placeholder="Search">
                 <div class="input-group-btn">
@@ -48,6 +48,6 @@
                     </button>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 </nav>
